# OneTrainer

./: .gitignore  AGENTS.md  CLAUDE.md  LAUNCH-SCRIPTS.md  export_debug.bat  install.bat  justfile  lib.include.sh  pyproject.toml  run-cmd.sh  start-ui.bat  start-ui.sh  update.bat  webui-implementation-progress.md  webui-refactor.md
.agents/skills/playwright-cli/: SKILL.md
.agents/skills/subagent-codex/: SKILL.md
.claude/skills/new-lora/: SKILL.md
apps/: README.md
apps/api/: README.md
apps/api/app/: main.py  schemas.py
apps/api/app/core/: settings.py  store.py
apps/api/app/mappers/: backup.py  concepts.py  data.py  general.py  lora.py  model.py  sampling.py  training.py
apps/api/app/routes/: backup.py  concepts.py  data.py  general.py  lora.py  model.py  sampling.py  tools.py  training.py
apps/api/app/schemas/: __init__.py  backup.py  common.py  concepts.py  data.py  general.py  lora.py  model.py  sampling.py  tools.py  training.py
apps/api/app/services/: backup_service.py  concepts_service.py  data_service.py  general_service.py  lora_service.py  model_service.py  sampling_service.py  tools_service.py  training_service.py
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json
apps/web/scripts/: export_openapi.py  playwright_smoke.sh
apps/web/src/: App.svelte  app.css
apps/web/src/app/: AppShell.svelte  configResource.ts  routes.ts
apps/web/src/features/backup/: BackupTab.svelte  adapter.ts  state.ts
apps/web/src/features/concepts/: ConceptsTab.svelte  adapter.ts  state.ts
apps/web/src/features/data/: DataTab.svelte  adapter.ts  state.ts
apps/web/src/features/general/: GeneralTab.svelte  adapter.ts  state.ts
apps/web/src/features/lora/: LoraTab.svelte  adapter.ts  state.ts
apps/web/src/features/model/: ModelTab.svelte  adapter.ts  state.ts
apps/web/src/features/sampling/: SamplingTab.svelte  adapter.ts  state.ts
apps/web/src/features/tools/: ToolsTab.svelte  adapter.ts  state.ts
apps/web/src/features/training/: TrainingTab.svelte  adapter.ts  state.ts
apps/web/src/lib/api/: client.ts  types.ts
apps/web/src/lib/components/ui/: Button.svelte  Input.svelte  Label.svelte  Select.svelte  Switch.svelte  Tabs.svelte
apps/web/src/shared/api/: http.ts
apps/web/src/shared/state/: ui.ts
docs/: gesen2egee-fork-cherry-picks.md  tui-vs-webui.md  zimage-lora-training-guide.md
modules/dataLoader/mixin/: DataLoaderText2ImageMixin.py
modules/modelSetup/: BaseZImageSetup.py
modules/modelSetup/mixin/: ModelSetupDiffusionLossMixin.py  ModelSetupNoiseMixin.py
modules/module/: LoRAModule.py
modules/trainer/: GenericTrainer.py
modules/ui/: LoraTab.py  TrainingTab.py
modules/util/config/: TrainConfig.py
modules/util/enum/: TimestepDistribution.py
scripts/: generate_test_dataset.py
training_presets/: #sd 1.5 LoRA (tiny-sd test).json  #z-image LoRA 24GB (community).json  #z-image LoRA 32GB (community).json
