[project]
name = "onetrainer"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    # base requirements
    "numpy==2.2.6",
    "opencv-python==4.11.0.86",
    "pillow==11.3.0",
    "imagesize==1.4.1",
    "tqdm==4.67.1",
    "pyyaml==6.0.2",
    "huggingface-hub==0.34.4",
    "scipy==1.15.3",
    "matplotlib==3.10.3",
    "av==16.1.0",
    "yt-dlp",
    "scenedetect==0.6.6",
    "parse==1.20.2",
    "setuptools==81.0.0",
    # pytorch
    "accelerate==1.7.0",
    "safetensors==0.5.3",
    "tensorboard==2.19.0",
    "pytorch-lightning==2.5.1.post0",
    # diffusion models
    "diffusers",
    "gguf==0.17.1",
    "transformers==4.56.2",
    "sentencepiece==0.2.1",
    "omegaconf==2.3.0",
    "invisible-watermark==0.2.0",
    # other models
    "pooch==1.8.2",
    "open-clip-torch==2.32.0",
    # data loader
    "mgds",
    # optimizers
    "dadaptation==3.2",
    "lion-pytorch==0.2.3",
    "prodigyopt==1.1.2",
    "schedulefree==1.4.1",
    "pytorch_optimizer==3.6.0",
    "prodigy-plus-schedule-free==2.0.1",
    "adv_optm==2.2.3",
    "muon-optimizer",
    # profiling
    "scalene==1.5.51",
    # ui
    "customtkinter==5.2.2",
    # cloud
    "runpod==1.7.10",
    "fabric==3.2.2",
    # debug
    "psutil==7.0.0",
    "requests==2.32.5",
    "deepdiff==8.6.1",
]

[dependency-groups]
cuda = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "onnxruntime-gpu==1.22.0",
    "nvidia-nccl-cu12==2.27.3; sys_platform == 'linux'",
    "triton-windows==3.4.0.post20; sys_platform == 'win32'",
    "bitsandbytes==0.46.0",
]
rocm = [
    "torch==2.7.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.22.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "pytorch-triton-rocm==3.3.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "onnxruntime==1.22.1",
]
cpu = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "onnxruntime==1.22.1",
]
dev = [
    "pre-commit>=4.0.1",
]

[tool.uv]
default-groups = []
conflicts = [
    [
        { group = "cuda" },
        { group = "rocm" },
        { group = "cpu" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm63"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git", rev = "6a1904e" }
mgds = { git = "https://github.com/Nerogar/mgds.git", rev = "a0c84a3" }
muon-optimizer = { git = "https://github.com/KellerJordan/Muon.git", rev = "f90a42b" }
torch = [
    { index = "pytorch-cu128", group = "cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-rocm63", group = "rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", group = "cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-rocm63", group = "rocm", marker = "sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm63", group = "rocm", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
extend-exclude = [
    # Exclude all third-party dependencies and environments.
    ".venv*",
    "venv*",
    "conda_env*",
    "src",
    # Do not lint the universal Python 2/3 version checker.
    "scripts/util/version_check.py",
]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP", "YTT", "BLE", "C4", "T10", "ISC", "ICN", "PIE", "PYI", "RSE", "RET", "SIM", "PGH", "FLY", "NPY", "PERF"]
ignore = ["BLE001", "E402", "E501", "B024", "PGH003", "RET504", "RET505", "SIM102", "UP015", "PYI041"]

[tool.ruff.lint.isort.sections]
hf = ["diffusers*", "transformers*"]
mgds = ["mgds"]
torch = ["torch*"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["modules"]
section-order = [
    "future",
    "standard-library",
    "first-party",
    "mgds",
    "torch",
    "hf",
    "third-party",
    "local-folder",
]
